<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_item_photo"
                android:layout_width="200dp"
                android:layout_height="150dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/img_photo"
                android:scaleType="fitXY"
                android:src="@android:color/darker_gray" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_toEndOf="@id/img_item_photo"
                android:orientation="vertical"
                android:layout_centerVertical="true"
                android:padding="12dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/img_loc"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="8dp"
                        android:contentDescription="@string/imageloc"
                        android:src="@drawable/location" />

                    <TextView
                        android:id="@+id/tv_item_loc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/place"
                        android:textColor="@color/DarkGrey"
                        android:textSize="15sp" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp">

                    <ImageView
                        android:id="@+id/img_height"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="8dp"
                        android:contentDescription="@string/img_height"
                        android:src="@drawable/height" />

                    <TextView
                        android:id="@+id/tv_item_height"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/height"
                        android:textColor="@color/DarkGrey"
                        android:textSize="15sp" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp">

                    <ImageView
                        android:id="@+id/img_eruption"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="8dp"
                        android:contentDescription="@string/img_erupt"
                        android:src="@drawable/eruption" />

                    <TextView
                        android:id="@+id/tv_item_eruption"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/condition"
                        android:textColor="@color/DarkGrey"
                        android:textSize="15sp" />

                </TableRow>

            </TableLayout>

        </RelativeLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:stretchColumns="*">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <ImageView
                    android:id="@+id/img_gmaps"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_gravity="center"
                    android:clickable="true"
                    android:contentDescription="@string/img_maps"
                    android:focusable="true"
                    android:onClick="onClickGmaps"
                    android:src="@drawable/gmaps" />

                <ImageView
                    android:id="@+id/img_search"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:clickable="true"
                    android:contentDescription="@string/img_search"
                    android:focusable="true"
                    android:onClick="onClickSearch"
                    android:src="@drawable/google" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <TextView
                    android:id="@+id/tv_loc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/location" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/image" />
            </TableRow>

        </TableLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/description"
            android:textStyle="bold"
            android:textColor="@color/DarkGrey"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_item_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/description"
            android:textColor="@color/DarkGrey" />

    </LinearLayout>

</ScrollView>