<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="40dp"
            android:gravity="center_horizontal"
            android:text="@string/about_me"
            android:textColor="@color/DarkGrey"
            android:textSize="25sp"
            android:textStyle="bold" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/daniel" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/author_name"
            android:textColor="@color/DarkGrey"
            android:textSize="25sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:gravity="center_horizontal"
            android:text="@string/email"
            android:textSize="14sp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:stretchColumns="*">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <ImageView
                    android:id="@+id/img_gmail"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:clickable="true"
                    android:contentDescription="@string/img_gmail"
                    android:focusable="true"
                    android:src="@drawable/gmail"
                    android:onClick="onClickGmail"/>

                <ImageView
                    android:id="@+id/img_telegram"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:clickable="true"
                    android:contentDescription="@string/img_Telegram"
                    android:focusable="true"
                    android:src="@drawable/telegram"
                    android:onClick="onClickTelegram"/>

                <ImageView
                    android:id="@+id/img_instagram"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:clickable="true"
                    android:contentDescription="@string/img_Insta"
                    android:focusable="true"
                    android:src="@drawable/instagram"
                    android:onClick="onClickInstagram"/>

            </TableRow>

        </TableLayout>

    </LinearLayout>
</ScrollView>