<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/activity_vertical_margin">

    <ImageView
        android:id="@+id/img_item_photo"
        android:layout_width="112dp"
        android:layout_height="85dp"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        tools:src="@android:color/darker_gray"
        android:padding="2dp"
        android:foreground="@drawable/background"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/img_item_photo"
        android:layout_toRightOf="@id/img_item_photo"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#424242"
            android:id="@+id/tv_item_name"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="@string/mountain_name"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_item_height"
            android:layout_marginBottom="10dp"
            android:ellipsize="end"
            android:textSize="12sp"
            android:maxLines="1"
            tools:text="@string/height"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#424242"
            android:id="@+id/tv_item_desc"
            android:ellipsize="end"
            android:maxLines="2"
            tools:text="@string/description"/>

    </LinearLayout>

</RelativeLayout>